Arregladas las sombras de los títulos de cada sección

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- * Inicio de la Sección de Proyectos -->
 
     <section class="projects" id="projects">
-      <span class="mainTitle shadow"></span>
+      <span class="mainTitle titleShadow--noBreak"></span>
       <h2 class="mainTitle frontShadow">Proyectos</h2>
 
       <section class="projects__container">
@@ -167,7 +167,7 @@
 
     <section class="algorithm" id="algorithm">
       <div class="mainTitleContainer">
-        <span class="mainTitle shadow"></span>
+        <span class="mainTitle algorithm__titleShadow--height"></span>
         <h2 class="mainTitle frontShadow">Algoritmos de Clasificación</h2>
       </div>
 
@@ -193,22 +193,22 @@
         <p class="algorithmSelector__text">Algoritmo:</p>
         <div class="algorithm__algorithmSelector">
           <div class="hover--rotate about__downloadCV">
-            <span class="shadow"></span>
+            <span class="shadow--tall"></span>
             <p class="frontShadow algorithm__option active">Bubble Sort</p>
           </div>
 
           <div class="hover--rotate about__downloadCV">
-            <span class="shadow"></span>
+            <span class="shadow--tall"></span>
             <p class="frontShadow algorithm__option">Selection Sort</p>
           </div>
 
           <div class="hover--rotate about__downloadCV">
-            <span class="shadow"></span>
+            <span class="shadow--tall"></span>
             <p class="frontShadow algorithm__option">Insertion Sort</p>
           </div>
 
           <div class="hover--rotate about__downloadCV">
-            <span class="shadow"></span>
+            <span class="shadow--tall"></span>
             <p class="frontShadow algorithm__option">Quick Sort</p>
           </div>
         </div>
@@ -241,7 +241,7 @@
 
     <section class="about" id="aboutMe">
       <div class="mainTitleContainer">
-        <span class="mainTitle shadow"></span>
+        <span class="mainTitle titleShadow--noBreak"></span>
         <h2 class="mainTitle frontShadow">Sobre mi</h2>
       </div>
 
@@ -361,7 +361,7 @@
 
     <section id="contact">
       <div class="mainTitleContainer">
-        <span class="mainTitle shadow"></span>
+        <span class="mainTitle titleShadow--noBreak"></span>
         <h2 class="mainTitle frontShadow">Contáctame!</h2>
       </div>
 
