Corregido un error ortográfico

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               React Native
             </p>
             <p class="projects__projectText">
-              Es una aplicación web en la cual apliqué los conocimeintos
+              Es una aplicación web en la cual apliqué los conocimientos
               adquiridos en React, haciendo una página Ecommerce y
               conectandola a Firebase
             </p>
