Cambiados los textos del index.html

--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
               React Native
             </p>
             <p class="projects__projectText">
-              Es una aplicación web en la cual apliqué los conocimientos
-              adquiridos en React, haciendo una página Ecommerce y
-              conectandola a Firebase
+              Es una aplicación web que cumple la función de E-commerce y se conecta a Firebase para almacenar los
+              productos y, luego de iniciar sesión, las órdenes de compra
             </p>
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Página Web</a>
@@ -110,9 +109,8 @@
               HTML - CSS - JavaScript
             </p>
             <p class="projects__projectText">
-              Es una aplicación educativa con el fin de enseñar a niños
-              pequeños sobre algún tópico de selección de manera entretenida y
-              superando retos visuales
+              Consiste de un mapa en el cual se van desbloqueando hasta 7 zonas que se desbloquean aprobando un
+              cuestionario y ganando un juego (tres diferentes) luego de los cuestionarios
             </p>
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Página Web</a>
@@ -130,8 +128,8 @@
               React Native
             </p>
             <p class="projects__projectText">
-              Es una página web para una comunidad fungui , la cual quiere
-              expandír su comunidad y llegar a más personas
+              Es una página web conectada a Firebase para una comunidad fungui, la cual quiere
+              expandir su comunidad y llegar a más personas.
             </p>
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Página Web</a>
@@ -149,7 +147,7 @@
               HTML - CSS
             </p>
             <p class="projects__projectText">
-              Es una página web que tiene el objetivo de demostrar los
+              Es una página web estática que tiene el objetivo de demostrar los
               conocimientos adquiridos en el curso de HTML y CSS de CoderHouse
             </p>
             <div class="projects__projectRedirections">
