Cambiados los textos y terminada de corregir la traducción de la página en ingles

--- a/English.html
+++ b/English.html
@@ -112,7 +112,7 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">E-commerce</h3>
-              <p class="projects__projectText">This project uses:</p>
+              <p class="projects__projectText projects__centerText">This project uses:</p>
               <p class="projects__projectText projects__centerText">
                 React Native
               </p>
@@ -139,13 +139,13 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Games App</h3>
-              <p class="projects__projectText">This project uses:</p>
+              <p class="projects__projectText projects__centerText">This project uses:</p>
               <p class="projects__projectText projects__centerText">
                 HTML - CSS - JavaScript
               </p>
               <p class="projects__projectText">
-                It's an educational application in order to teach childrens on
-                some selection topic in an entertaining and overcoming visual
+                It's an educational application in order to teach childrens about
+                a topic of selection entertaining them with visual
                 challenges
               </p>
               <div class="projects__projectRedirections">
@@ -166,7 +166,7 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Simbiontes</h3>
-              <p class="projects__projectText">This project uses:</p>
+              <p class="projects__projectText projects__centerText">This project uses:</p>
               <p class="projects__projectText projects__centerText">
                 React Native
               </p>
@@ -192,7 +192,7 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
-              <p class="projects__projectText">This project uses:</p>
+              <p class="projects__projectText projects__centerText">This project uses:</p>
               <p class="projects__projectText projects__centerText">
                 HTML - CSS
               </p>
