--- a/Spanish.html
+++ b/Spanish.html
@@ -112,7 +112,9 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">E-commerce</h3>
-              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                Este proyecto utiliza:
+              </p>
               <p class="projects__projectText projects__centerText">
                 React Native
               </p>
@@ -139,14 +141,14 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">App de juegos</h3>
-              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                Este proyecto utiliza:
+              </p>
               <p class="projects__projectText projects__centerText">
                 HTML - CSS - JavaScript
               </p>
               <p class="projects__projectText">
-                Es una aplicación educativa con el fin de enseñar a niños
-                pequeños sobre algún tópico de selección de manera entretenida y
-                superando retos visuales
+                Es una aplicación educativa para enseñar a los niños sobre algun asunto-materia (a gusto) entreteniéndolos con retos visuales.
               </p>
               <div class="projects__projectRedirections">
                 <a href="#" class="projectLink__left projects__projectLink"
@@ -166,7 +168,9 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Simbiontes</h3>
-              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                Este proyecto utiliza:
+              </p>
               <p class="projects__projectText projects__centerText">
                 React Native
               </p>
@@ -192,7 +196,9 @@
             />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
-              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                Este proyecto utiliza:
+              </p>
               <p class="projects__projectText projects__centerText">
                 HTML - CSS
               </p>
