Agregado el curriculum en ingles

--- a/English.html
+++ b/English.html
@@ -348,7 +348,7 @@
           <div class="hover--rotate centerObject">
             <span class="shadow about__downloadShadow"></span>
             <a
-              href="./Assets/Images/Curriculum (spanish).pdf"
+              href="./Assets/Images/Curriculum (english).pdf"
               download="Curriculum - Francisco Muñiz"
               class="frontShadow"
               >Download my CV</a
@@ -562,5 +562,6 @@
     <script type="text/javascript" src="./JS/ChangeActiveAlgorithm.js"></script>
     <script type="text/javascript" src="./JS/ChangeRangeValues.js"></script>
     <script type="text/javascript" src="./JS/SetAlgorithmBars.js"></script>
+    <script type="text/javascript" src="./JS/StartSorting.js"></script>
   </body>
 </html>
