--- a/Spanish.html
+++ b/Spanish.html
@@ -148,7 +148,8 @@
                 HTML - CSS - JavaScript
               </p>
               <p class="projects__projectText">
-                Es una aplicación educativa para enseñar a los niños sobre algun asunto-materia (a gusto) entreteniéndolos con retos visuales.
+                Es una aplicación educativa para enseñar a los niños sobre algun
+                asunto-materia (a gusto) entreteniéndolos con retos visuales.
               </p>
               <div class="projects__projectRedirections">
                 <a href="#" class="projectLink__left projects__projectLink"
@@ -525,13 +526,13 @@
 
         <div class="contact">
           <div class="contact__mapContainer">
-            <iframe
+            <!-- <iframe
               class="contact__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113355.06544861024!2d-55.99455653417701!3d-27.396139495246434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be7f080496c3%3A0xccbff374623e7b9a!2sPosadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1657547275084!5m2!1ses-419!2sar"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            ></iframe> -->
             <p class="contact__mapText">
               Si estás cerca, contáctame y tomemos un café
             </p>
@@ -566,6 +567,7 @@
       <!-- * Final de la Sección de Contacto -->
     </main>
 
+    <script type="text/javascript" src="./JS/StartSorting.js"></script>
     <script type="text/javascript" src="./JS/ChangeActiveAlgorithm.js"></script>
     <script type="text/javascript" src="./JS/ChangeRangeValues.js"></script>
     <script type="text/javascript" src="./JS/SetAlgorithmBars.js"></script>
