Quitados los fondos de las tecnologías trabajadas

--- a/English.html
+++ b/English.html
@@ -443,7 +443,7 @@
               <div class="about__technology--hover">Figma</div>
               <img
                 src="./Assets/Images/FIGMA-logo.png"
-                alt="BEM-Logo"
+                alt="Figma-Logo"
                 class="about__technologyIMG"
               />
             </div>
@@ -458,9 +458,9 @@
             </div>
 
             <div class="about__technology">
-              <div class="about__technology--hover">Spotify API</div>
+              <div class="about__technology--hover">BEM</div>
               <img
-                src="./Assets/Images/SPOTIFY.jpg"
+                src="./Assets/Images/BEM-logo.png"
                 alt="SpotifyAPI-Logo"
                 class="about__technologyIMG"
               />
