Agregados los algoritmos a los HTML

--- a/English.html
+++ b/English.html
@@ -582,7 +582,12 @@
 
             <div class="hover--rotate centerObject">
               <span class="shadow contact__sendButton--width"></span>
-              <p class="frontShadow contact__sendButton--width">Send</p>
+              <button
+                type="button"
+                class="frontShadow contact__sendButton--width"
+              >
+                Send
+              </button>
             </div>
           </form>
         </div>
@@ -603,14 +608,40 @@
     ></script>
     <script
       type="text/javascript"
+      src="./JS/SetAlgorithmBars.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
       src="./JS/EnableDisableButtons.js"
       defer
     ></script>
     <script
       type="text/javascript"
-      src="./JS/SetAlgorithmBars.js"
+      src="./JS/StartStopSorting.js"
       defer
     ></script>
-    <script type="text/javascript" src="./JS/StartSorting.js" defer></script>
+
+    <!-- Sorting Algorithms -->
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/BubbleSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/InsertionSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/QuickSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/SelectionSort.js"
+      defer
+    ></script>
   </body>
 </html>
