--- a/Spanish.html
+++ b/Spanish.html
@@ -582,7 +582,12 @@
 
             <div class="hover--rotate centerObject">
               <span class="shadow contact__sendButton--width"></span>
-              <p class="frontShadow contact__sendButton--width">Enviar</p>
+              <button
+                type="button"
+                class="frontShadow contact__sendButton--width"
+              >
+                Enviar
+              </button>
             </div>
           </form>
         </div>
@@ -591,7 +596,6 @@
       <!-- * Final de la Sección de Contacto -->
     </main>
 
-    <script type="text/javascript" src="./JS/StartSorting.js" defer></script>
     <script
       type="text/javascript"
       src="./JS/ChangeActiveAlgorithm.js"
@@ -604,12 +608,39 @@
     ></script>
     <script
       type="text/javascript"
+      src="./JS/SetAlgorithmBars.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
       src="./JS/EnableDisableButtons.js"
       defer
     ></script>
     <script
       type="text/javascript"
-      src="./JS/SetAlgorithmBars.js"
+      src="./JS/StartStopSorting.js"
+      defer
+    ></script>
+
+    <!-- Sorting Algorithms -->
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/BubbleSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/InsertionSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/QuickSort.js"
+      defer
+    ></script>
+    <script
+      type="text/javascript"
+      src="./JS/Algorithms/SelectionSort.js"
       defer
     ></script>
   </body>
