--- a/Spanish.html
+++ b/Spanish.html
@@ -220,12 +220,12 @@
             </button>
           </div>
 
-          <div class="hover--rotate about__downloadCV">
+          <!-- <div class="hover--rotate about__downloadCV">
             <span class="shadow--tall"></span>
             <button type="button" id="quickSort" class="frontShadow algorithm__option">
               Quick Sort
             </button>
-          </div>
+          </div> -->
         </div>
       </section>
 
