--- a/Spanish.html
+++ b/Spanish.html
@@ -358,7 +358,7 @@
         <section class="about__aboutMe">
           <p class="aboutMe__text">
             <img
-              src="./Assets/Images/myself.png"
+              src="./Assets/Images/myAvatar.png"
               alt="Foto del programador del portfolio"
               class="aboutMe__img"
               align="left"
@@ -572,7 +572,7 @@
 
           <form
             class="contact__form"
-            action="https://formsubmit.co/el/fejapa"
+            action="https://formsubmit.co/"
             method="POST"
           >
             <h3 class="contact__formTitle">Envíame un mensaje</h3>
