agregada la funcionalidad al formulario

--- a/Spanish.html
+++ b/Spanish.html
@@ -572,17 +572,11 @@
 
           <form
             class="contact__form"
-            action="https://formsubmit.co/"
+            action="https://formsubmit.co/31c3ba2f24e1340ca02c4f2ce657e9f7"
             method="POST"
           >
             <h3 class="contact__formTitle">Envíame un mensaje</h3>
 
-            <input
-              type="hidden"
-              name="_next"
-              value="https://yourdomain.co/thanks.html"
-            />
-            
             <input
               class="contact__messageTitle"
               type="email"
