Quitado el captcha y redireccionado a la misma página

--- a/Index.html
+++ b/Index.html
@@ -570,6 +570,12 @@
             action="https://formsubmit.co/31c3ba2f24e1340ca02c4f2ce657e9f7"
             method="POST"
           >
+            <input
+              type="hidden"
+              name="_next"
+              value="https://francisco-muniz.netlify.app"
+            />
+
             <h3 class="contact__formTitle">Send me a Message</h3>
 
             <input
