Quitados los captcha y agregados los redireccionamientos

--- a/Index.html
+++ b/Index.html
@@ -576,6 +576,8 @@
               value="https://francisco-muniz.netlify.app"
             />
 
+            <input type="hidden" name="_captcha" value="false" />
+
             <h3 class="contact__formTitle">Send me a Message</h3>
 
             <input
