--- a/Spanish.html
+++ b/Spanish.html
@@ -575,10 +575,12 @@
             action="https://formsubmit.co/31c3ba2f24e1340ca02c4f2ce657e9f7"
             method="POST"
           >
+            <input type="hidden" name="_captcha" value="false" />
+
             <input
               type="hidden"
               name="_next"
-              value="https://francisco-muniz.netlify.app"
+              value="https://francisco-muniz.netlify.app/Spanish.html"
             />
 
             <h3 class="contact__formTitle">Envíame un mensaje</h3>
