Modificado el redireccionamiento a la pág en ingles desde la pág en español

--- a/Spanish.html
+++ b/Spanish.html
@@ -21,7 +21,7 @@
 
           <div class="landing__languageButton">
             <span class="buttonShadow shadow"></span>
-            <a class="landing__button frontShadow" href="English.html"
+            <a class="landing__button frontShadow" href="Index.html"
               >English</a
             >
           </div>
