Generada la funcionalidad básica de un modal

--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,7 @@
           <div class="projects__projectRight">
             <h3 class="projects__projectTitle">E-commerce</h3>
 
-            <button id="firstProject" class="project__infoButton">More info...</button>
+            <button id="firstProjectModal" class="project__infoButton">More info...</button>
 
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
