Generados los 4 modales

--- a/Index.html
+++ b/Index.html
@@ -99,17 +99,9 @@
           <img src="./Assets/Images/App de juegos.png" alt="Imagen del proyecto" />
           <div class="projects__projectRight">
             <h3 class="projects__projectTitle">Games App</h3>
-            <p class="projects__projectText projects__centerText">
-              This project uses:
-            </p>
-            <p class="projects__projectText projects__centerText">
-              HTML - CSS - JavaScript
-            </p>
-            <p class="projects__projectText">
-              It's an educational application in order to teach childrens
-              about a topic of selection entertaining them with visual
-              challenges
-            </p>
+
+            <button id="seconsProjectModal" class="project__infoButton">More info...</button>
+
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
               <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
@@ -121,16 +113,9 @@
           <img src="./Assets/Images/Simbiontes.png" alt="Imagen del proyecto" />
           <div class="projects__projectRight">
             <h3 class="projects__projectTitle">Simbiontes</h3>
-            <p class="projects__projectText projects__centerText">
-              This project uses:
-            </p>
-            <p class="projects__projectText projects__centerText">
-              React Native
-            </p>
-            <p class="projects__projectText">
-              It's a web page for a fungui community, which wants to expand
-              their community and reach more people
-            </p>
+
+            <button id="thirdProjectModal" class="project__infoButton">More info...</button>
+
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
               <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
@@ -142,16 +127,9 @@
           <img src="./Assets/Images/Página estática.png" alt="Imagen del proyecto" />
           <div class="projects__projectRight">
             <h3 class="projects__projectTitle">Página Estática</h3>
-            <p class="projects__projectText projects__centerText">
-              This project uses:
-            </p>
-            <p class="projects__projectText projects__centerText">
-              HTML - CSS
-            </p>
-            <p class="projects__projectText">
-              It's a web page that has the objective of demonstrating the
-              knowledge acquired in the CoderHouse HTML and CSS course
-            </p>
+
+            <button id="fourthProjectModal" class="project__infoButton">More info...</button>
+
             <div class="projects__projectRedirections">
               <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
               <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
@@ -159,6 +137,7 @@
           </div>
         </article>
 
+        <!-- Primer modal -->
         <div class="modal" id="firstModal">
           <div class="projects__modalContent">
             <span class="modal__closeBtn">&times;</span>
@@ -179,8 +158,115 @@
                 It's a web page that has the objective of demonstrating the
                 knowledge acquired in the CoderHouse HTML and CSS course
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis id. Quibusdam dolorum eos error? Optio?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus eos sit quas nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
+                id. Quibusdam dolorum eos error? Optio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
+                eos sit quas nihil.
+              </p>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Segundo modal -->
+        <div class="modal" id="secondModal">
+          <div class="projects__modalContent">
+            <span class="modal__closeBtn">&times;</span>
+            <img src="./Assets/Images/App de juegos.png" alt="Imagen del proyecto" class="projects__modalImg" />
+            <div class="projects__modalRight">
+              <h3 class="projects__projectTitle">Página Estática</h3>
+              <hr />
+
+              <p class="projects__projectText projects__centerText">
+                This project uses:
+              </p>
+              <p class="projects__projectText projects__centerText">
+                HTML - CSS
+              </p>
+              <hr />
+
+              <p class="projects__projectText">
+                It's a web page that has the objective of demonstrating the
+                knowledge acquired in the CoderHouse HTML and CSS course
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
+                id. Quibusdam dolorum eos error? Optio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
+                eos sit quas nihil.
+              </p>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tercer modal -->
+        <div class="modal" id="thirdModal">
+          <div class="projects__modalContent">
+            <span class="modal__closeBtn">&times;</span>
+            <img src="./Assets/Images/Simbiontes.png" alt="Imagen del proyecto" class="projects__modalImg" />
+            <div class="projects__modalRight">
+              <h3 class="projects__projectTitle">Página Estática</h3>
+              <hr />
+
+              <p class="projects__projectText projects__centerText">
+                This project uses:
+              </p>
+              <p class="projects__projectText projects__centerText">
+                HTML - CSS
+              </p>
+              <hr />
+
+              <p class="projects__projectText">
+                It's a web page that has the objective of demonstrating the
+                knowledge acquired in the CoderHouse HTML and CSS course
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
+                id. Quibusdam dolorum eos error? Optio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
+                eos sit quas nihil.
+              </p>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cuarto modal -->
+        <div class="modal" id="fourthModal">
+          <div class="projects__modalContent">
+            <span class="modal__closeBtn">&times;</span>
+            <img src="./Assets/Images/Página estática.png" alt="Imagen del proyecto" class="projects__modalImg" />
+            <div class="projects__modalRight">
+              <h3 class="projects__projectTitle">Página Estática</h3>
+              <hr />
+
+              <p class="projects__projectText projects__centerText">
+                This project uses:
+              </p>
+              <p class="projects__projectText projects__centerText">
+                HTML - CSS
+              </p>
+              <hr />
+
+              <p class="projects__projectText">
+                It's a web page that has the objective of demonstrating the
+                knowledge acquired in the CoderHouse HTML and CSS course
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
+                id. Quibusdam dolorum eos error? Optio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
+                eos sit quas nihil.
               </p>
 
               <div class="projects__projectRedirections">
