Agregados los modales a la versión en español

--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
           </div>
         </article>
 
-        <!-- Primer modal -->
+        <!-- Primer modal (Ecommerce) -->
         <div class="modal" id="firstModal">
           <div class="projects__modalContent">
             <span class="modal__closeBtn">&times;</span>
@@ -150,18 +150,20 @@
                 This project uses:
               </p>
               <p class="projects__projectText projects__centerText">
-                HTML - CSS
+                React Native - Firebase
               </p>
               <hr />
 
               <p class="projects__projectText">
-                It's a web page that has the objective of demonstrating the
-                knowledge acquired in the CoderHouse HTML and CSS course
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
-                id. Quibusdam dolorum eos error? Optio?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
-                eos sit quas nihil.
+                It's a generic E-commerce app made in the React for a of CoderHouse.
+                <br>
+                The design was of my own and it's functionalities were made while the ongoing of the course
+                <br>
+                It takes products from a custom made collection of Firebase, also takes a single product from Firebase
+                and displays a detailed page of them.
+                <br>
+                It has a cart (detailed page and miniature at top-right) with stock control and saves the "Purchase
+                orders" on Firebase
               </p>
 
               <div class="projects__projectRedirections">
@@ -172,7 +174,7 @@
           </div>
         </div>
 
-        <!-- Segundo modal -->
+        <!-- Segundo modal (Games App) -->
         <div class="modal" id="secondModal">
           <div class="projects__modalContent">
             <span class="modal__closeBtn">&times;</span>
@@ -185,18 +187,19 @@
                 This project uses:
               </p>
               <p class="projects__projectText projects__centerText">
-                HTML - CSS
+                HTML - CSS - JS
               </p>
               <hr />
 
               <p class="projects__projectText">
                 It's a web page that has the objective of demonstrating the
                 knowledge acquired in the CoderHouse HTML and CSS course
+                <br>
+                It's an educational app (with no specific topic loaded) for small childs
+                <br>
+                It's objective is to to get to the final stage and to do so you must read something on the app, have a
+                multiple choice quiz about it and win a Game (if you fail you only play the game again)
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam tempora ex earum blanditiis
-                id. Quibusdam dolorum eos error? Optio?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odio blanditiis ad a qui quia doloribus
-                eos sit quas nihil.
               </p>
 
               <div class="projects__projectRedirections">
@@ -276,6 +279,7 @@
             </div>
           </div>
         </div>
+
       </section>
     </section>
 
