--- a/Spanish.html
+++ b/Spanish.html
@@ -131,7 +131,7 @@
             <button id="fourthProjectModal" class="project__infoButton">Más información</button>
 
             <div class="projects__projectRedirections">
-              <a href="#" class="projectLink__left projects__projectLink">Página Web</a>
+              <a href="#" class="projectLink__left projects__projectLink">Página web</a>
               <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
             </div>
           </div>
@@ -168,7 +168,7 @@
               </p>
 
               <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
                 <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
               </div>
             </div>
@@ -202,7 +202,7 @@
               </p>
 
               <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
                 <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
               </div>
             </div>
@@ -237,7 +237,7 @@
               </p>
 
               <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
                 <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
               </div>
             </div>
@@ -272,7 +272,7 @@
               </p>
 
               <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Web Page</a>
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
                 <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
               </div>
             </div>
