--- a/Spanish.html
+++ b/Spanish.html
@@ -145,6 +145,12 @@
             <img src="./Assets/Images/Ecommerce.png" alt="Imagen del proyecto" class="projects__modalImg" />
             <div class="projects__modalRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+
               <hr />
 
               <p class="projects__projectText projects__centerText">
@@ -167,10 +173,6 @@
                 "Pedido de compra" en Firebase
               </p>
 
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
-                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
-              </div>
             </div>
           </div>
         </div>
@@ -182,6 +184,12 @@
             <img src="./Assets/Images/App de juegos.png" alt="Imagen del proyecto" class="projects__modalImg" />
             <div class="projects__modalRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+
               <hr />
 
               <p class="projects__projectText projects__centerText">
@@ -198,13 +206,11 @@
                 <br>
                 Es una aplicación educativa (sin un tema específico cargado) para niños pequeños
                 <br>
-                Su objetivo es llegar a la etapa final y para hacerlo debes leer un texto (a insertar) en la aplicación, tener una prueba de opción múltiple al respecto, aprovarla con 7 y ganar un juego (si fallas en este punto, solo vuelves a jugar al juego que te tocó)
+                Su objetivo es llegar a la etapa final y para hacerlo debes leer un texto (a insertar) en la aplicación,
+                tener una prueba de opción múltiple al respecto, aprovarla con 7 y ganar un juego (si fallas en este
+                punto, solo vuelves a jugar al juego que te tocó)
               </p>
 
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
-                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
-              </div>
             </div>
           </div>
         </div>
@@ -216,6 +222,12 @@
             <img src="./Assets/Images/Simbiontes.png" alt="Imagen del proyecto" class="projects__modalImg" />
             <div class="projects__modalRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+
               <hr />
 
               <p class="projects__projectText projects__centerText">
@@ -236,10 +248,6 @@
                 eos sit quas nihil.
               </p>
 
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
-                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
-              </div>
             </div>
           </div>
         </div>
@@ -251,6 +259,12 @@
             <img src="./Assets/Images/Página estática.png" alt="Imagen del proyecto" class="projects__modalImg" />
             <div class="projects__modalRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
+
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
+                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
+              </div>
+
               <hr />
 
               <p class="projects__projectText projects__centerText">
@@ -271,10 +285,6 @@
                 eos sit quas nihil.
               </p>
 
-              <div class="projects__projectRedirections">
-                <a href="#" class="projectLink__left projects__projectLink">Página web</a>
-                <a href="#" class="projectLink__right projects__projectLink">GitHub</a>
-              </div>
             </div>
           </div>
         </div>
